deploy/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: newsportal-api
  labels:
    type: api
    service: newsportal-api
    language: python
spec:
  replicas: 3
  selector:
    matchLabels:
      type: api
      service: newsportal-api
      language: python
  minReadySeconds: 5
  revisionHistoryLimit: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        type: api
        service: newsportal-api
        language: python
    spec:
      containers:
      - name: api
        image: tanvir/newsportal
        imagePullPolicy: Never
        ports:
          - containerPort: 8000
        readinessProbe:
          httpGet:
            path: /api
            port: 8000
          periodSeconds: 1
        livenessProbe:
          httpGet:
            path: /api
            port: 8000

---

apiVersion: v1
kind: Service
metadata:
  name: newsportal-api
spec:
  type: NodePort
  ports:
    - port: 8000
  selector:
    type: api
    service: newsportal-api
    language: python
