deploy/db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: newsportal-app-db
  labels:
    type: db
    service: newsportal-db
    vendor: postgres
spec:
  selector:
    matchLabels:
      type: db
      service: newsportal-db
      vendor: postgres
  template:
    metadata:
      labels:
        type: db
        service: newsportal-db
        vendor: postgres
    spec:
      containers:
      - name: db
        image: postgres
        volumeMounts:
        - name: postgres-db
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: postgres-db
        persistentVolumeClaim:
          claimName: postgres-pvc

---

apiVersion: v1
kind: Service
metadata:
  name: newsportal-app-db
spec:
  ports:
  - port: 5432
  selector:
    type: db
    service: newsportal-db
    vendor: postgres
